fixed whitebox i hope

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 </div>
 </div>
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="js/jquery/jquery.slim.min.js"></script>
+  <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
