--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,8 @@
 </section>
 </div>
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="js/jquery/jquery.slim.min.js"></script>
+  <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
