added column class

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
   <!-- Contact -->
   <div class="d-flex justify-content-center">
     
-    <section style="height: auto;" id="contact">
+    <section class="col-md-6 style="height: auto;" id="contact">
     
       <div style="margin-top: 30px;" class="container">
           <form action="action_page.php">
@@ -109,5 +109,10 @@
   <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
+<footer id="page-footer">
 
+  <p style="float: left;">Michael Hoffman Copyright 2020</p>
+
+
+</footer>
 </html>
