--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
 
   <!-- ABOUT -->
-  <div class="d-flex justify-content-center">
+  
     
-  <div style="position: absolute; top: 100px; background-color: white; padding: 15px;" class="col-md-6">
+  <div style="margin: 10px; background-color: white; padding: 15px;" class="col-md-6">
     <h1 class="nav-brand"> About me </h1>
     <hr style="width: 60%;">
     <div class="image-wrapper float-left pr-3">
@@ -81,11 +81,18 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ad, ex eaque fuga minus reprehenderit asperiores earum incidunt. Possimus maiores dolores voluptatum enim soluta omnis debitis quam ab nemo necessitatibus.
     </div>
 </div>
-</div>
+
   <!-- Bootstrap core JavaScript -->
   <script src="js/jquery/jquery.slim.min.js"></script>
   <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
+<footer id="page-footer">
+
+  <p style="float: left;">Michael Hoffman Copyright 2020</p>
+
+
+</footer>
 
 </html>
