--- a/portfolio.html
+++ b/portfolio.html
@@ -64,9 +64,9 @@
 
 
   <!-- PORTFOLIO -->
-  <div class="d-flex justify-content-center">
+  <div style="text-align: center;">
     
-    <div id="contact2">
+    <div class="col-md-6 id="contact2">
       <div class="row">
       <div class="column">
  <img src="images/1.png" alt="">
@@ -84,5 +84,10 @@
   <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
+<footer id="page-footer">
 
+  <p style="float: left;">Michael Hoffman Copyright 2020</p>
+
+
+</footer>
 </html>
