commit with margin

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Michael Hoffman Portfolio</title>
 
@@ -68,7 +68,7 @@
   <!-- Contact -->
   <div class="d-flex justify-content-center">
     
-    <section class="col-md-6 style="height: auto;" id="contact">
+    <section class="col-md-6 style=" style= "height: auto; margin: 20px;" id="contact">
     
       <div style="margin-top: 30px;" class="container">
           <form action="action_page.php">
