--- a/portfolio.html
+++ b/portfolio.html
@@ -64,9 +64,10 @@
 
 
   <!-- PORTFOLIO -->
-  <div style="text-align: center;">
+  
+  <div style= "margin: 20px;">
     
-    <div class="col-md-6 id="contact2">
+    <div class="col-md-6">
       <div class="row">
       <div class="column">
  <img src="images/1.png" alt="">
@@ -79,6 +80,7 @@
  </div>
       </div>
 </div>
+
   
   <script src="js/jquery/jquery.slim.min.js"></script>
   <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
